[gd_scene load_steps=11 format=3 uid="uid://dm8bx8pdblfi0"]

[ext_resource type="Script" path="res://Player_Controler/player_v4.gd" id="1_k5lwy"]
[ext_resource type="Texture2D" uid="uid://c2m4hc083xq38" path="res://Godot-Prototype-Texture-a00f682a79b2cf85e2b595c062013dc3e34d69bc/Textures/logo_blue_512x512.png" id="2_xu7im"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_hha4d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_lif2i"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_gd1pc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_d2tlq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_ysm6l"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="8_mxquh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e24f1"]
height = 1.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vak6q"]
albedo_texture = ExtResource("2_xu7im")
uv1_scale = Vector3(-1, -1, -1)
uv1_offset = Vector3(0.75, 0, 0)

[node name="PlayerV4" type="CharacterBody3D"]
script = ExtResource("1_k5lwy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_e24f1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 8.51696)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
height = 1.75
material = SubResource("StandardMaterial3D_vak6q")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_hha4d")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_lif2i")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("5_gd1pc")
initial_state = NodePath("grounded")

[node name="grounded" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("6_d2tlq")

[node name="On Jump" type="Node" parent="StateChart/Root/Movement/grounded"]
script = ExtResource("7_ysm6l")
to = NodePath("../../Airborne/Jump")
event = &"to_jump"

[node name="On Airborne" type="Node" parent="StateChart/Root/Movement/grounded"]
script = ExtResource("7_ysm6l")
to = NodePath("../../Airborne")
event = &"to_air"

[node name="Airborne" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_gd1pc")
initial_state = NodePath("Air")

[node name="Air" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("6_d2tlq")

[node name="On Ground" type="Node" parent="StateChart/Root/Movement/Airborne/Air"]
script = ExtResource("7_ysm6l")
to = NodePath("../../../grounded")
event = &"to_ground"

[node name="Jump" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("6_d2tlq")

[node name="Dodge" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("6_d2tlq")

[node name="On Air" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("7_ysm6l")
to = NodePath("../Air")
event = &"to_air"

[node name="StateChartDebugger" parent="." instance=ExtResource("8_mxquh")]
offset_left = 1303.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -579.0
initial_node_to_watch = NodePath("../StateChart")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "asdfasdfsdaf"

[connection signal="state_physics_processing" from="StateChart/Root/Movement/grounded" to="." method="_grounded_physics"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborne" to="." method="_airborne_physics"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborne/Air" to="." method="_air_physics"]
[connection signal="state_entered" from="StateChart/Root/Movement/Airborne/Jump" to="." method="_jump_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborne/Jump" to="." method="_jump_physics"]
